metadata/force-app/main/default/objects/Module_Trial_Request__c/Module_Trial_Request__c.object-meta.xml
<CustomObject>
    <label>Module Trial Request</label>
    <nameField>
        <displayFormat>TR-{0000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Module Trial Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>