metadata/force-app/main/default/objects/Module_Trial_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Module_Trail_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>