metadata/force-app/main/default/objects/Module_Trial_Request__c/fields/account_id__c.field-meta.xml
<CustomField>
    <fullName>account_id__c</fullName>
    <description>Salesforce account id</description>
    <formula>Account__r.Account_ID_18_digits__c</formula>
    <label>Account ID</label>
    <type>Text</type>
</CustomField>