metadata/force-app/main/default/objects/Module_Trial_Request__c/fields/activated_date__c.field-meta.xml
<CustomField>
    <fullName>activated_date__c</fullName>
    <description>Date of actual trial start</description>
    <label>Activated Date</label>
    <type>Date</type>
</CustomField>