metadata/force-app/main/default/objects/Module_Trial_Request__c/fields/deactivated_date__c.field-meta.xml
<CustomField>
    <fullName>deactivated_date__c</fullName>
    <description>Date of actual trial end</description>
    <label>Deactivated Date</label>
    <type>Date</type>
</CustomField>