metadata/force-app/main/default/objects/Module_Trial_Request__c/fields/portal_id__c.field-meta.xml
<CustomField>
    <fullName>portal_id__c</fullName>
    <description>Main portal id</description>
    <formula>Account__r.Portal_ID__c</formula>
    <label>Portal ID</label>
    <type>Text</type>
</CustomField>