metadata/force-app/main/default/objects/Module_Trial_Request__c/fields/requested_trial_end_date__c.field-meta.xml
<CustomField>
    <fullName>requested_trial_end_date__c</fullName>
    <formula>activated_date__c  +  trial_period__c</formula>
    <label>Scheduled Trial End Date</label>
    <type>Date</type>
</CustomField>