metadata/force-app/main/default/objects/Module_Trial_Request__c/fields/requested_trial_start_date__c.field-meta.xml
<CustomField>
    <fullName>requested_trial_start_date__c</fullName>
    <description>Agreed upon date of trial start</description>
    <label>Requested Date</label>
    <type>Date</type>
</CustomField>