metadata/force-app/main/default/objects/Module_Trial_Request__c/fields/trial_module__c.field-meta.xml
<CustomField>
    <fullName>trial_module__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trial Module</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Module Trial Requests</relationshipLabel>
    <relationshipName>Module_Trail_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>