metadata/force-app/main/default/objects/Module_Trial_Request__c/fields/trial_module_name__c.field-meta.xml
<CustomField>
    <fullName>trial_module_name__c</fullName>
    <formula>trial_module__r.Name</formula>
    <label>Trial Module Name</label>
    <type>Text</type>
</CustomField>