metadata/force-app/main/default/objects/Module_Trial_Request__c/fields/trial_period__c.field-meta.xml
<CustomField>
    <fullName>trial_period__c</fullName>
    <defaultValue>14</defaultValue>
    <label>Trial Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>