metadata/force-app/main/default/objects/Module_Trial_Request__c/fields/trial_status__c.field-meta.xml
<CustomField>
    <fullName>trial_status__c</fullName>
    <formula>IF (AND (NOT (ISBLANK( requested_trial_start_date__c )), ISBLANK( activated_date__c ), requested_trial_start_date__c &lt;= TODAY()), &quot;Request raised&quot; , 

IF( AND (NOT (ISBLANK( requested_trial_start_date__c )), NOT (ISBLANK( activated_date__c )),ISBLANK( deactivated_date__c  ), activated_date__c &lt;= TODAY(), requested_trial_end_date__c &gt; TODAY()), &quot;Active Trial&quot; , 


IF( AND (NOT (ISBLANK( requested_trial_start_date__c )), NOT (ISBLANK( activated_date__c )),NOT(ISBLANK( deactivated_date__c  )), deactivated_date__c &lt;= TODAY()), &quot;Trial Terminated&quot; , 

IF( AND (NOT (ISBLANK( requested_trial_start_date__c )), NOT (ISBLANK( activated_date__c )),ISBLANK( deactivated_date__c ),  requested_trial_end_date__c &lt;= TODAY()), &quot;Trail Overdue&quot; , 

NULL

))))</formula>
    <label>Trial Status</label>
    <type>Text</type>
</CustomField>