metadata/force-app/main/default/objects/Module_Trial_Request__c/fields/upgrade_to_paid__c.field-meta.xml
<CustomField>
    <fullName>upgrade_to_paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upgrade to Paid</label>
    <type>Checkbox</type>
</CustomField>